--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "module": "es/index.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=production babel ./src --delete-dir-on-start --out-dir es",
+    "build": "cross-env NODE_ENV=production babel ./src --ignore '**/*.stories.jsx' --delete-dir-on-start --out-dir es",
     "lint": "eslint --ext js,jsx src",
     "test": "jest test --coverage",
     "storybook": "start-storybook --docs -p 9001",
@@ -63,7 +63,6 @@
     "prop-types": "^15.6.1",
     "react": "^16.6.2",
     "react-dom": "^16.6.2",
-    "react-test-renderer": "^16.10.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1"
   },
