Exported some of the React components from Stage to new repository (CY-1486)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,20 +3,14 @@
         "airbnb",
         "prettier",
         "prettier/react",
+        "plugin:jest/recommended",
         "plugin:react/recommended"
     ],
     "plugins": [
+        "jest",
         "prettier"
     ],
     "rules": {
         "prettier/prettier": ["error"]
-    },
-    "overrides": [
-        {
-            "files": "test/**",
-            "env": {
-                "jest": true
-            }
-        }
-    ]
+    }
 }
