--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "module": "es/index.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=production babel ./src --ignore '**/*.stories.jsx' --delete-dir-on-start --out-dir es",
+    "build": "cross-env NODE_ENV=production babel ./src --ignore '**/*.stories.jsx' --copy-files --delete-dir-on-start --out-dir es",
     "lint": "eslint --ext js,jsx src test",
     "test": "jest test --coverage",
     "storybook": "start-storybook --docs -p 9001",
@@ -69,6 +69,11 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1"
   },
+  "dependencies": {
+    "rc-tree": "1.13.0",
+    "react-copy-to-clipboard": "^5.0.1",
+    "react-syntax-highlighter": "^11.0.2"
+  },
   "peerDependencies": {
     "lodash": "^4.17.15",
     "prop-types": "^15.6.1",
@@ -77,7 +82,9 @@
     "semantic-ui-react": "^0.84.0",
     "semantic-ui-css": "^2.4.1"
   },
-  "dependencies": {
-    "react-copy-to-clipboard": "^5.0.1"
-  }
+  "bundledDependencies": [
+    "rc-tree",
+    "react-copy-to-clipboard",
+    "react-syntax-highlighter"
+  ]
 }
