--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "semantic-ui-react": "^0.88.1"
   },
   "dependencies": {
-    "rc-tree": "1.13.0",
+    "rc-tree": "^2.1.3",
     "react-copy-to-clipboard": "^5.0.1",
     "react-syntax-highlighter": "^11.0.2"
   },
