--- a/package.json
+++ b/package.json
@@ -71,8 +71,11 @@
   },
   "dependencies": {
     "rc-tree": "^2.1.3",
+    "react-color": "^2.17.3",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-syntax-highlighter": "^11.0.2"
+    "react-datepicker": "^2.9.6",
+    "react-syntax-highlighter": "^11.0.2",
+    "tinycolor2": "^1.4.1"
   },
   "peerDependencies": {
     "lodash": "^4.17.15",
@@ -84,7 +87,10 @@
   },
   "bundledDependencies": [
     "rc-tree",
+    "react-color",
     "react-copy-to-clipboard",
-    "react-syntax-highlighter"
+    "react-datepicker",
+    "react-syntax-highlighter",
+    "tinycolor2"
   ]
 }
