--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "@storybook/addon-storyshots": "^5.2.5",
     "@storybook/react": "^5.3.0-alpha.40",
     "@storybook/theming": "^5.3.0-alpha.40",
+    "@types/enzyme": "^3.10.3",
+    "@types/jest": "^24.0.22",
+    "@types/prop-types": "^15.7.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-require-context-hook": "^1.0.0",
@@ -76,6 +79,7 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-datepicker": "1.8.0",
     "react-json-view": "^1.19.1",
+    "react-transition-group": "^4.3.0",
     "react-syntax-highlighter": "^11.0.2",
     "tinycolor2": "^1.4.1"
   },
@@ -94,6 +98,7 @@
     "react-copy-to-clipboard",
     "react-datepicker",
     "react-json-view",
+    "react-transition-group",
     "react-syntax-highlighter",
     "tinycolor2"
   ]
