--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "lint": "eslint --ext js,jsx src test",
     "test": "jest test --coverage",
     "storybook": "start-storybook --docs -p 9001",
-    "build-storybook": "build-storybook --docs -c .storybook"
+    "build-storybook": "build-storybook --docs -c .storybook",
+    "publish:major": "sh scripts/publish-version.sh major",
+    "publish:minor": "sh scripts/publish-version.sh minor",
+    "publish:patch": "sh scripts/publish-version.sh patch"
   },
   "keywords": [
     "react",
@@ -47,6 +50,7 @@
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-require-context-hook": "^1.0.0",
+    "cloudify-ui-common": "^1.2.0",
     "cross-env": "^6.0.3",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
