--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
     "prop-types": "^15.6.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-element-to-jsx-string": "^14.1.0",
+    "react-live": "^2.2.1",
     "react-test-renderer": "^16.10.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1"
