--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,5 +12,10 @@
     ],
     "rules": {
         "prettier/prettier": ["error"]
+    },
+    "settings": {
+        "import/resolver": {
+            "babel-module": {}
+        }
     }
 }
