--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "buildDev": "babel ./src --ignore '**/*.stories.jsx' --copy-files --delete-dir-on-start --out-dir es --watch",
     "lint": "eslint --ext js,jsx src test",
     "test:jest": "jest test --coverage",
-    "test:loki": "build-storybook && loki --chromeTolerance 101 --chromeSelector \"body > *\" --requireReference --reactUri file:./storybook-static",
-    "test:loki:update": "loki update --chromeSelector \"body > *\"",
+    "test:loki": "build-storybook && loki --diffingEngine gm --chromeTolerance 0.9 --requireReference --reactUri file:./storybook-static",
     "test": "npm run lint && npm run test:jest && npm run test:loki",
     "storybook": "start-storybook --docs -p 9001",
     "build-storybook": "build-storybook --docs -c .storybook",
@@ -107,6 +106,7 @@
   },
   "loki": {
     "verboseRenderer": true,
+    "chromeSelector": "body > *",
     "configurations": {
       "chrome.laptop": {
         "target": "chrome.app",
