--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-require-context-hook": "^1.0.0",
-    "cloudify-ui-common": "^1.3.0",
     "cross-env": "^6.0.3",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
@@ -84,6 +83,7 @@
     "semantic-ui-react": "^0.88.1"
   },
   "dependencies": {
+    "cloudify-ui-common": "1.4.0",
     "rc-tree": "^2.1.3",
     "react-color": "^2.17.3",
     "react-copy-to-clipboard": "^5.0.1",
