--- a/package.json
+++ b/package.json
@@ -41,15 +41,15 @@
     "url": "https://cloudify.co/slack/"
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.4",
-    "@babel/core": "^7.6.3",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-react": "^7.6.3",
-    "@storybook/addon-actions": "^5.3.0-alpha.40",
-    "@storybook/addon-docs": "^5.3.0-alpha.40",
-    "@storybook/addon-storyshots": "^5.2.5",
-    "@storybook/react": "^5.3.0-alpha.40",
-    "@storybook/theming": "^5.3.0-alpha.40",
+    "@babel/cli": "^7.8.0",
+    "@babel/core": "^7.8.0",
+    "@babel/preset-env": "^7.8.2",
+    "@babel/preset-react": "^7.8.0",
+    "@storybook/addon-actions": "^5.3.1",
+    "@storybook/addon-docs": "^5.3.1",
+    "@storybook/addon-storyshots": "^5.3.1",
+    "@storybook/react": "^5.3.1",
+    "@storybook/theming": "^5.3.1",
     "@types/enzyme": "^3.10.3",
     "@types/jest": "^24.0.22",
     "@types/prop-types": "^15.7.3",
