--- a/package.json
+++ b/package.json
@@ -45,19 +45,21 @@
     "@babel/core": "^7.8.0",
     "@babel/preset-env": "^7.8.2",
     "@babel/preset-react": "^7.8.0",
-    "@storybook/addon-actions": "^5.3.1",
-    "@storybook/addon-docs": "^5.3.1",
-    "@storybook/addon-storyshots": "^5.3.1",
-    "@storybook/react": "^5.3.1",
-    "@storybook/theming": "^5.3.1",
+    "@storybook/addon-actions": "^5.3.8",
+    "@storybook/addon-docs": "^5.3.8",
+    "@storybook/addon-storyshots": "^5.3.8",
+    "@storybook/preset-scss": "^1.0.2",
+    "@storybook/react": "^5.3.8",
+    "@storybook/theming": "^5.3.8",
     "@types/enzyme": "^3.10.3",
-    "@types/jest": "^24.0.22",
+    "@types/jest": "^24.9.1",
     "@types/prop-types": "^15.7.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-require-context-hook": "^1.0.0",
     "cross-env": "^6.0.3",
+    "css-loader": "^3.4.2",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "eslint": "^6.7.2",
@@ -74,16 +76,19 @@
     "jest": "^24.9.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "node-sass": "^4.13.1",
     "prettier": "^1.18.2",
     "prop-types": "^15.6.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-test-renderer": "^16.10.2",
+    "sass-loader": "^8.0.2",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.1"
+    "semantic-ui-react": "^0.88.1",
+    "style-loader": "^1.1.3"
   },
   "dependencies": {
-    "cloudify-ui-common": "1.4.0",
+    "cloudify-ui-common": "1.5.0",
     "rc-tree": "^2.1.3",
     "react-color": "^2.17.3",
     "react-copy-to-clipboard": "^5.0.1",
