--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "eslint-plugin-security": "^1.4.0",
     "jest": "^24.9.0",
     "lodash": "^4.17.15",
+    "loki": "^0.18.1",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "prettier": "^1.18.2",
@@ -114,7 +115,7 @@
     "chromeSelector": "body > *",
     "configurations": {
       "chrome.laptop": {
-        "target": "chrome.app",
+        "target": "chrome.docker",
         "width": 1366,
         "height": 768,
         "deviceScaleFactor": 1,
