--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ defaults: &defaults
   working_directory: ~/repo
 
 jobs:
-  build-test:
+  build:
     <<: *defaults
     steps:
       - checkout
@@ -16,11 +16,11 @@ jobs:
           command: npm ci
 
       - run:
-          name: Build application
+          name: Build UI components
           command: npm run build
 
       - run:
-          name: Building static version of StoryBook
+          name: Build static version of StoryBook
           command: npm run build-storybook
 
       - run:
@@ -35,6 +35,17 @@ jobs:
           root: ~/
           paths:
             - repo
+
+  test:
+    <<: *defaults
+    steps:
+      - run:
+          name: Run static analysis and check code style
+          command: npm run lint
+
+      - run:
+          name: Run tests
+          command: npm run test
 
   deploy:
     docker:
@@ -58,10 +69,13 @@ workflows:
   version: 2
   build-test-deploy:
     jobs:
-      - build-test
+      - build
+      - test:
+          requires:
+            - build
       - deploy:
           filters:
             branches:
               only: CY-1485
           requires:
-            - build-test
+            - test
