Fixed CircleCI config file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,7 +76,7 @@ workflows:
   build-test-deploy:
     jobs:
       - build
-      - test
+      - test:
           requires:
             - build
       - publish:
