Added workspace persisting to CircleCI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,11 @@ jobs:
           name: Build application
           command: npm run build
 
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - repo
+
   test:
     <<: *defaults
     steps:
