Added graphicsmagick installation before running loki tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,9 @@ jobs:
 
       - run:
           name: Run Loki tests
-          command: npm run test:loki
+          command: |
+            sudo apt-get update && sudo apt-get install graphicsmagick
+            npm run test:loki
 
       - store_artifacts:
           path: .loki
