--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 defaults: &defaults
   docker:
-    - image: circleci/node:10.15-stretch
+    - image: circleci/node:10.15-stretch-browsers
   working_directory: ~/repo
 
 jobs:
