--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
     "chromeSelector": "body > *",
     "configurations": {
       "chrome.laptop": {
-        "target": "chrome.docker",
+        "target": "chrome.app",
         "width": 1366,
         "height": 768,
         "deviceScaleFactor": 1,
