--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "buildDev": "babel ./src --ignore '**/*.stories.jsx' --copy-files --delete-dir-on-start --out-dir es --watch",
     "lint": "eslint --ext js,jsx src test",
     "test:jest": "jest test --coverage --maxWorkers=2",
-    "test:loki": "build-storybook && loki --diffingEngine gm --requireReference --reactUri file:./storybook-static",
+    "test:loki": "build-storybook && loki --diffingEngine gm --chromeTolerance 0.9 --requireReference --reactUri file:./storybook-static",
     "test:loki:download": "sh scripts/download-loki-files.sh",
     "test": "npm run lint && npm run test:jest",
     "storybook": "start-storybook --docs -p 9001",
