Improved CircleCI and npm scripts

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,12 @@ jobs:
           command: npm ci
 
       - run:
-          name: Build application
+          name: Build UI components
           command: npm run build
+
+      - run:
+          name: Build Storybook
+          command: npm run build-storybook
 
       - persist_to_workspace:
           root: ~/
