--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,7 +102,8 @@ jobs:
       - run:
           name: Deploy to S3
           command:  |
-            export VERSION=${CIRCLE_BRANCH/publish-v/}
+#            export VERSION=${CIRCLE_BRANCH/publish-v/}
+            export VERSION=test
             aws s3 sync storybook-static s3://docs.cloudify.co/ui-components/$VERSION --delete --acl public-read
 
 workflows:
@@ -121,4 +122,5 @@ workflows:
               only: /^publish-v.*/
       - deploy:
           requires:
-            - publish
+            - build
+#            - publish
