Enabled npm audit in Circle CI build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -111,6 +111,15 @@ jobs:
             export VERSION=${CIRCLE_BRANCH/publish-v/}
             aws s3 sync storybook-static s3://docs.cloudify.co/ui-components/$VERSION --delete --acl public-read
 
+  audit:
+    <<: *defaults
+    steps:
+      -   attach_workspace:
+            at: ~/
+      -   run:
+            name: Run npm production dependencies security audit
+            command: npm run audit
+
 workflows:
   version: 2
   build-test-deploy:
@@ -128,3 +137,9 @@ workflows:
       - deploy:
           requires:
             - publish
+      - audit:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
