--- a/jenkins/build-pod.yaml
+++ b/jenkins/build-pod.yaml
@@ -3,13 +3,16 @@ kind: Pod
 spec:
   containers:
   - name: node
-    image: node:12.16.1
+    image: circleci/node:12.16-browsers
     resources:
       requests:
         cpu: 0.8
     command:
     - cat
     tty: true
+    securityContext:
+      runAsUser: 0
+      privileged: true
   - name: awscli
     image: amazon/aws-cli
     command:
