--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "style-loader": "^1.1.3"
   },
   "dependencies": {
-    "cloudify-ui-common": "1.6.2",
+    "cloudify-ui-common": "^1.6.2",
     "rc-tree": "^2.1.3",
     "react-color": "^2.17.3",
     "react-copy-to-clipboard": "^5.0.1",
