--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -78,7 +78,7 @@ pipeline {
     }
     stage('Publish') {
       when {
-        expression { return branch =~ /^publish-v.*/ }
+        expression { return env.BRANCH =~ /^publish-v.*/ }
       }
       steps {
         container('node'){
@@ -112,7 +112,7 @@ pipeline {
     }
     stage('Deploy') {
       when {
-        expression { return branch =~ /^publish-v.*/ }
+        expression { return env.BRANCH =~ /^publish-v.*/ }
       }
       steps {
         container('awscli'){
@@ -132,7 +132,7 @@ pipeline {
     }
     stage('Audit'){
       when {
-        branch 'master'
+        expression { return env.BRANCH =~ /master/ }
       }
       steps {
         container('node'){
