--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -34,45 +34,9 @@ pipeline {
     timestamps()
   }
   stages {
-    stage('Build') {
-      steps {
+    stage('BUILD') {
         container('node'){
-          dir("${env.WORKSPACE}/${env.PROJECT}") {
-            echo "Install dependencies"
-            sh 'npm ci --prefer-offline'
-
-            echo "Build UI components"
-            sh 'npm run build'
-
-            echo "Build Storybook"
-            sh 'npm run build-storybook'
-          }
-        }
-      }
-    }
-    stage('Test') {
-      steps {
-        container('node'){
-          dir("${env.WORKSPACE}/${env.PROJECT}") {
-            echo "Run static analysis and check code style"
-            sh 'npm run lint'
-
-            echo "Run Jest tests"
-            sh 'npm run test:jest'
-
-            echo "Run Loki tests"
-            sh '''
-              apt-get update && apt-get -y install graphicsmagick
-              npm run test:loki
-            '''
-
-            dir(".loki") {
-              echo "Saving Loki generated files"
-              sh 'tar czf current.tar.gz current'
-              archiveArtifacts artifacts: 'current.tar.gz'
-              archiveArtifacts artifacts: 'difference/*.png', allowEmptyArchive: true
-            }
-          }
+          echo "BRANCH: ${env.BRANCH}"
         }
       }
     }
@@ -82,64 +46,7 @@ pipeline {
       }
       steps {
         container('node'){
-          dir("${env.WORKSPACE}/${env.PROJECT}") {
-            withVault([configuration: configuration, vaultSecrets: secrets]) {
-              echo "Authenticate with registry"
-              sh "echo '//registry.npmjs.org/:_authToken=${env.NPM_TOKEN}' > .npmrc"
-
-              echo "Publish package"
-              sh 'npm publish'
-
-              echo "Setup git user"
-              sh '''
-                git config user.email "cosmo-admin@github.com"
-                git config user.name "cosmo-admin-CircleCI"
-              '''
-
-              echo "Update main branch"
-              sh """
-                git checkout ${env.MAIN_BRANCH}
-                git merge --ff-only ${env.BRANCH}
-                git push -q https://${env.GITHUB_TOKEN}@github.com/cloudify-cosmo/cloudify-ui-components.git ${env.MAIN_BRANCH}
-              """
-
-              echo "Remove publish branch"
-              sh "git push -q https://${env.GITHUB_TOKEN}@github.com/cloudify-cosmo/cloudify-ui-components.git --delete ${env.BRANCH}"
-            }
-          }
-        }
-      }
-    }
-    stage('Deploy') {
-      when {
-        expression { return env.BRANCH =~ /^publish-v.*/ }
-      }
-      steps {
-        container('awscli'){
-          dir("${env.WORKSPACE}/${env.PROJECT}") {
-            withVault([configuration: configuration, vaultSecrets: secrets]) {
-              echo "Setting Signature Version 4 for S3 Request Authentication"
-              sh "aws configure set default.s3.signature_version s3v4"
-
-              echo "Deploy to S3"
-              sh """
-                aws s3 sync storybook-static s3://docs.cloudify.co/ui-components/${getPublishVersion(BRANCH)} --delete --acl public-read"
-              """
-            }
-          }
-        }
-      }
-    }
-    stage('Audit'){
-      when {
-        branch 'master'
-      }
-      steps {
-        container('node'){
-          dir("${env.WORKSPACE}/${env.PROJECT}") {
-            echo 'Run npm production dependencies security audit'
-            sh 'npm run audit'
-          }
+          echo "${env.BRANCH}"
         }
       }
     }
