--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -35,6 +35,7 @@ pipeline {
   }
   stages {
     stage('BUILD') {
+      steps {
         container('node'){
           echo "BRANCH: ${env.BRANCH}"
         }
