--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -36,7 +36,7 @@ pipeline {
   stages {
     stage('BUILD') {
       steps {
-        echo "BRANCH: ${env.BRANCH}"
+        echo "BRANCH: ${env}"
         container('node'){
           echo "BRANCH: ${BRANCH}"
         }
