Updated package description (package.json) and license file (LICENSE)

--- a/package.json
+++ b/package.json
@@ -8,11 +8,7 @@
     "url": "git+https://github.com/cloudify-cosmo/cloudify-ui-components.git"
   },
   "license": "Apache-2.0",
-  "author": {
-    "name": "Jakub Niezgoda",
-    "email": "jakub.niezgoda@cloudify.co",
-    "url": "https://github.com/qooban"
-  },
+  "author": "Cloudify Platform Ltd. <cosmo-admin@cloudify.co>",
   "files": [
     "es"
   ],
