--- a/package.json
+++ b/package.json
@@ -77,12 +77,13 @@
     "node-sass": "^4.14.1",
     "prettier": "^2.1.2",
     "prop-types": "^15.6.1",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-test-renderer": "^16.10.2",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-test-renderer": "^16.11.0",
     "sass-loader": "^8.0.2",
     "semantic-ui-css-offline": "^1.0.4-2.4.2",
     "semantic-ui-react": "^2.0.1",
+    "styled-components": "^5.2.1",
     "style-loader": "^1.1.3"
   },
   "dependencies": {
@@ -101,10 +102,11 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "prop-types": "^15.6.1",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "semantic-ui-react": "^2.0.0",
-    "semantic-ui-css-offline": "^1.0.4-2.4.2"
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "semantic-ui-react": "^2.0.1",
+    "semantic-ui-css-offline": "^1.0.4-2.4.2",
+    "styled-components": "^5.2.1"
   },
   "loki": {
     "verboseRenderer": true,
