--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "eslint-plugin-security": "^1.4.0",
     "jest": "^25.5.4",
     "lodash": "^4.17.19",
-    "loki": "^0.25.1",
+    "loki": "^0.26.0",
     "moment": "^2.24.0",
     "node-sass": "^4.14.1",
     "prettier": "^2.1.2",
@@ -83,8 +83,8 @@
     "sass-loader": "^8.0.2",
     "semantic-ui-css-offline": "^1.0.4-2.4.2",
     "semantic-ui-react": "^2.0.1",
-    "styled-components": "^5.2.1",
-    "style-loader": "^1.1.3"
+    "style-loader": "^1.1.3",
+    "styled-components": "^5.2.1"
   },
   "dependencies": {
     "cloudify-ui-common": "^2.0.0",
@@ -93,7 +93,7 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-datepicker": "1.8.0",
     "react-json-view": "^1.19.1",
-    "react-live": "^2.2.2",
+    "react-live": "^2.2.3",
     "react-syntax-highlighter": "^11.0.2",
     "react-transition-group": "^4.3.0",
     "tinycolor2": "^1.4.1"
