RD-1230 Add handling TS to babel, jest, eslint, storybook

--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
   ],
   "main": "es/index.js",
   "module": "es/index.js",
-  "types": "typings/index.d.ts",
+  "types": "typings/components/index.d.ts",
   "scripts": {
     "audit": "npm audit --production",
     "build": "bash scripts/build-components.sh && npm run generate-type-declarations",
-    "buildDev": "babel ./src --ignore '**/*.stories.jsx' --copy-files --delete-dir-on-start --out-dir es --watch",
+    "buildDev": "babel ./src/components --ignore '**/*.stories.{jsx,tsx}' --copy-files --delete-dir-on-start --extensions '.ts,.tsx,.js,.jsx' --out-dir es --watch",
     "check-types": "cd src && tsc --noEmit --emitDeclarationOnly false && cd ../test && tsc --noEmit",
     "generate-type-declarations": "cd src && tsc; echo Done",
-    "lint": "eslint --cache --ignore-path .gitignore --ext js,jsx --max-warnings 10 .",
+    "lint": "eslint --cache --ignore-path .gitignore --ext js,jsx,ts,tsx --max-warnings 10 .",
     "test:jest": "jest test --coverage --maxWorkers=2",
     "test:loki": "loki --diffingEngine gm --chromeTolerance 0.9 --requireReference --reactUri file:./storybook-static",
     "test": "npm run lint && npm run test:jest",
@@ -48,6 +48,7 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
     "@storybook/addon-docs": "^6.1.14",
     "@storybook/addon-storyshots": "^6.1.14",
     "@storybook/preset-scss": "^1.0.3",
@@ -57,6 +58,8 @@
     "@types/jest": "^24.9.1",
     "@types/lodash": "^4.14.168",
     "@types/prop-types": "^15.7.3",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
     "babel-jest": "^26.6.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^3.2.0",
