RD-1230 Disable checking JS for tsc

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "audit": "npm audit --production",
     "build": "bash scripts/build-components.sh && npm run generate-type-declarations",
     "buildDev": "babel ./src/components --ignore '**/*.stories.{jsx,tsx}' --copy-files --delete-dir-on-start --extensions '.ts,.tsx,.js,.jsx' --out-dir es --watch",
-    "check-types": "cd src && tsc --noEmit --emitDeclarationOnly false && cd ../test && tsc --noEmit",
-    "generate-type-declarations": "cd src && tsc; echo Done",
+    "check-types": "tsc -p src --noEmit --emitDeclarationOnly false --checkJs false && tsc -p test --noEmit --checkJs false",
+    "generate-type-declarations": "tsc -p src --checkJs false",
     "lint": "eslint --cache --ignore-path .gitignore --ext js,jsx,ts,tsx --max-warnings 10 .",
     "test:jest": "jest test --coverage --maxWorkers=2",
     "test:loki": "loki --diffingEngine gm --chromeTolerance 0.9 --requireReference --reactUri file:./storybook-static",
