--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/jest": "^24.9.1",
     "@types/lodash": "^4.14.168",
     "@types/prop-types": "^15.7.3",
+    "@types/tinycolor2": "^1.4.2",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "babel-jest": "^26.6.0",
